[package]
name = "a01-hello"
version = "0.1.0"
authors = ["xue35@Mac <xue35@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[dev-dependencies]
pretty_env_logger = "0.4"

[build]
rustdocflags = ["--no-deps"]
