[package]
name = "d03-body"
version = "0.1.0"
authors = ["xue35@Mac <xue35@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }

